AssignmtDataLoader1/src/objects/parent__c.object
<CustomObject>
    <fields>
        <fullName>Discription__c</fullName>
        <label>Discription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uncle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Uncle</label>
        <referenceTo>Uncle__c</referenceTo>
        <relationshipLabel>parents</relationshipLabel>
        <relationshipName>parents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>parent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>parent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>parents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>